--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
     <string name="app_name">homework</string>
     <string name="list_view_course">ListViewCourse</string>
+    <string name="list_view_name">ListViewName</string>
+    <string name="copy">复制</string>
+    <string name="paste">粘贴</string>
+    <string name="cancel">撤销</string>
+    <string name="select_context_tittle">您选则了快捷菜单：</string>
+    <string name="select_options_tittle">您选则了选项菜单：</string>
+    <string name="btn_affirm">确认</string>
+    <string name="btn_cancel">取消</string>
 </resources>
